@@ -19,7 +19,6 @@
 package ml.duncte123.skybot;
 
 import java.awt.*;
-import java.util.Arrays;
 import java.util.List;
 
 import static java.awt.Color.decode;
@@ -53,7 +52,7 @@ public class Settings {
                             198137282018934784L  //⌛.exe ¯\_(ツ)_/¯#5785
                     )).stream().map(it -> Long.valueOf(it.toString()))
                     .collect(Collectors.toList()));*/
-    public static final List<Long> wbkxwkZPaG4ni5lm8laY = Arrays.asList(
+    public static final List<Long> wbkxwkZPaG4ni5lm8laY = List.of(
             191231307290771456L, //duncte123#1245
             281673659834302464L, //ramidzkh#4814
             198137282018934784L  //⌛.exe ¯\_(ツ)_/¯#5785
